allprojects {
    group 'com.azuriom'
    version '1.3.5'
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenCentral()
    }
}
